--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <input type="hidden" name="_template" value="table"> <!-- Formats the email nicely -->
 
             <label for="name">name:</label>
-            <input type="text" id="name" name="name" placeholder="your hacker name" required>
+            <input type="text" id="name" name="name" placeholder="your name/nickname" required>
             
             <label for="skill">cheese skill level:</label>
             <select id="skill" name="skill">
